hphp/hack/test/typecheck/postfix_parse3.php.exp
File "postfix_parse3.php", line 15, characters 9-10:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "postfix_parse3.php", line 19, characters 13-14:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
